kuberenetes-manifests/apibuilder-dev-663b079701b9ac75d98c0c59-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apibuilder-dev-663b079701b9ac75d98c0c59
  namespace: dev
spec:
  gateways:
  - apiwiz-system/apiwiz-gateway
  hosts:
  - builder-test.ICIC.com
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: apibuilder-agent
        port:
          number: 8000
      headers:
        request:
          add:
            x-tenant: acme-team-gcp-stage-1715144599245--ApiBuilder
